vma/procedures.odin


	// Binds buffer to allocation.
	@(link_name = "vmaBindBufferMemory")
	bind_buffer_memory :: proc(allocator: Allocator, allocation: Allocation, buffer: vk.Buffer) -> vk.Result ---

	// Binds buffer to allocation with additional parameters.
	@(link_name = "vmaBindBufferMemory2")
	bind_buffer_memory2 :: proc(allocator: Allocator, allocation: Allocation, allocation_local_offset: vk.DeviceSize, buffer: vk.Buffer, next: rawptr) -> vk.Result ---

	// Binds image to allocation.
	@(link_name = "vmaBindImageMemory")
	bind_image_memory :: proc(allocator: Allocator, allocation: Allocation, image: vk.Image) -> vk.Result ---

	// Binds image to allocation with additional parameters.
	@(link_name = "vmaBindImageMemory2")
	bind_image_memory2 :: proc(allocator: Allocator, allocation: Allocation, allocation_local_offset: vk.DeviceSize, image: vk.Image, next: rawptr) -> vk.Result ---

	// Creates a new `VkBuffer`, allocates and binds memory for it.
	@(link_name = "vmaCreateBuffer")
	create_buffer :: proc(allocator: Allocator, buffer_create_info: ^vk.BufferCreateInfo, allocation_create_info: ^Allocation_Create_Info, buffer: ^vk.Buffer, allocation: ^Allocation, allocation_info: ^Allocation_Info) -> vk.Result ---

	// Creates a buffer with additional minimum alignment.
	@(link_name = "vmaCreateBufferWithAlignment")
	create_buffer_with_alignment :: proc(allocator: Allocator, buffer_create_info: ^vk.BufferCreateInfo, allocation_create_info: ^Allocation_Create_Info, min_alignment: vk.DeviceSize, buffer: ^vk.Buffer, allocation: ^Allocation, allocation_info: ^Allocation_Info) -> vk.Result ---

	// Creates a new `vk.Buffer`, binds already created memory for it.
	@(link_name = "vmaCreateAliasingBuffer")
	create_aliasing_buffer :: proc(allocator: Allocator, allocation: Allocation, buffer_create_info: ^vk.BufferCreateInfo, buffer: ^vk.Buffer) -> vk.Result ---

	// Destroys Vulkan buffer and frees allocated memory.
	@(link_name = "vmaDestroyBuffer")
	destroy_buffer :: proc(allocator: Allocator, buffer: vk.Buffer, allocation: Allocation) ---

	// Function similar to `create_buffer()`.
	@(link_name = "vmaCreateImage")
	create_image :: proc(allocator: Allocator, image_create_info: ^vk.ImageCreateInfo, allocation_create_info: ^Allocation_Create_Info, image: ^vk.Image, allocation: ^Allocation, allocation_info: ^Allocation_Info) -> vk.Result ---

	// Function similar to `create_aliasing_buffer()`.
	@(link_name = "vmaCreateAliasingImage")
	create_aliasing_image :: proc(allocator: Allocator, allocation: Allocation, image_create_info: ^vk.ImageCreateInfo, image: ^vk.Image) -> vk.Result ---

	// Destroys Vulkan image and frees allocated memory.
	@(link_name = "vmaDestroyImage")
	destroy_image :: proc(allocator: Allocator, image: vk.Image, allocation: Allocation) ---

	// Creates new `Virtual_Block` object.
	@(link_name = "vmaCreateVirtualBlock")
	create_virtual_block :: proc(create_info: ^Virtual_Block_Create_Info, virtual_block: ^Virtual_Block) -> vk.Result ---

	// Destroys `Virtual_Block` object.
	@(link_name = "vmaDestroyVirtualBlock")
	destroy_virtual_block :: proc(virtual_block: Virtual_Block) ---

	// Returns true of the `Virtual_Block` is empty - contains 0 virtual allocations and has all
	// its space available for new allocations.
	@(link_name = "vmaIsVirtualBlockEmpty")
	is_virtual_block_empty :: proc(virtual_block: Virtual_Block) -> c.bool ---

	// Returns information about a specific virtual allocation within a virtual block, like its
	// size and `user_data` pointer.
	@(link_name = "vmaGetVirtualAllocationInfo")
	get_virtual_allocation_info :: proc(virtual_block: Virtual_Block, allocation: Virtual_Allocation, virtual_alloc_info: ^Virtual_Allocation_Info) ---

	// Allocates new virtual allocation inside given #VmaVirtualBlock.
	@(link_name = "vmaVirtualAllocate")
	virtual_allocate :: proc(virtual_block: Virtual_Block, create_info: ^Virtual_Allocation_Create_Info, allocation: ^Virtual_Allocation, offset: ^vk.DeviceSize) -> vk.Result ---

	// Frees virtual allocation inside given #VmaVirtualBlock.
	@(link_name = "vmaVirtualFree")
	virtual_free :: proc(virtual_block: Virtual_Block, allocation: Virtual_Allocation) ---

	// Frees all virtual allocations inside given #VmaVirtualBlock.
	@(link_name = "vmaClearVirtualBlock")
	clear_virtual_block :: proc(virtual_block: Virtual_Block) ---

	// Changes custom pointer associated with given virtual allocation.
	@(link_name = "vmaSetVirtualAllocationUserData")
	set_virtual_allocation_user_data :: proc(virtual_block: Virtual_Block, allocation: Virtual_Allocation, user_data: rawptr) ---

	// Calculates and returns statistics about virtual allocations and memory usage in given
	// `Virtual_Block`.
	@(link_name = "vmaGetVirtualBlockStatistics")
	get_virtual_block_statistics :: proc(virtual_block: Virtual_Block, stats: ^Statistics) ---

	// Calculates and returns detailed statistics about virtual allocations and memory usage in given `Virtual_Block`.
	@(link_name = "vmaCalculateVirtualBlockStatistics")
	calculate_virtual_block_statistics :: proc(virtual_block: Virtual_Block, stats: ^Detailed_Statistics) ---

	// Builds and returns a null-terminated string in JSON format with information about given
	// `Virtual_Block`.
	@(link_name = "vmaBuildVirtualBlockStatsString")
	build_virtual_block_stats_string :: proc(virtual_block: Virtual_Block, stats_string: ^cstring, detailed_map: c.bool) ---

	// Frees a string returned by `build_virtual_block_stats_string()`.
	@(link_name = "vmaFreeVirtualBlockStatsString")
	free_virtual_block_stats_string :: proc(virtual_block: Virtual_Block, stats_string: cstring) ---

	// Builds and returns statistics as a null-terminated string in JSON format.
	@(link_name = "vmaBuildStatsString")
	build_stats_string :: proc(allocator: Allocator, stats_string: ^cstring, detailed_map: c.bool) ---

	// Frees a string returned by `build_stats_string()`.
	@(link_name = "vmaFreeStatsString")
	free_stats_string :: proc(allocator: Allocator, stats_string: cstring) ---
}
